--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="facebook.com.br">LINK</a>
+    <a style="justify-content: center;" href="facebook.com.br">LINK</a> 
 </body>
 
 
